Fixed dropdown z-indexing bug

--- a/Client/public/components/Attendance.css
+++ b/Client/public/components/Attendance.css
@@ -121,8 +121,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--main-color-1);
-    opacity: 0.8;
+    background-color: var(--main-color-1-80);
     transition: 0.4s linear all;
 }
 
@@ -131,7 +130,6 @@
 }
 
 button:disabled {
-    opacity: 1;
     background-color: var(--main-color-lower-1);
 }
 
@@ -141,7 +139,7 @@ button:disabled>svg>circle {
 }
 
 .button:hover {
-    opacity: 1;
+    background-color: var(--main-color-1);
 }
 
 .icon>circle,
